# DarkPlate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build_windows.cmd  build_windows_debug.cmd  rebuild_windows_debug.cmd
nn/: own_darkmark_dataset.cfg  own_darkmark_dataset.data  own_darkmark_dataset.names  own_darkmark_dataset_train.sh  own_darkmark_dataset_train.txt  own_darkmark_dataset_valid.txt
nn/images/: alfa_biala_wpr1792s_0.json  alfa_biala_wpr1792s_0.txt  alfa_biala_wpr1792s_1.json  alfa_biala_wpr1792s_1.txt  alfa_biala_wpr1792s_2.json  alfa_biala_wpr1792s_2.txt  alfa_biala_wpr1792s_3.json  alfa_biala_wpr1792s_3.txt  alfa_biala_wpr1792s_4.json  alfa_biala_wpr1792s_4.txt  alfa_biala_wpr1792s_5.json  alfa_biala_wpr1792s_5.txt  audi_czarne_wi215kf_0.json  audi_czarne_wi215kf_0.txt  audi_czarne_wi215kf_1.json  audi_czarne_wi215kf_1.txt  audi_czarne_wi215kf_2.json  audi_czarne_wi215kf_2.txt  audi_czarne_wi215kf_3.json  audi_czarne_wi215kf_3.txt  audi_czarne_wi215kf_4.json  audi_czarne_wi215kf_4.txt  audi_czarne_wi_.json  audi_czarne_wi_.txt  audi_czarne_wi_2.json  audi_czarne_wi_2.txt  audi_czarne_wi_3.json  audi_czarne_wi_3.txt  audi_czarne_wi_4.json  audi_czarne_wi_4.txt  bagiety_hpzb554_1.json  bagiety_hpzb554_1.txt  bagiety_hpzb554_2.json  bagiety_hpzb554_2.txt  bagiety_hpzb554_3.json  bagiety_hpzb554_3.txt  bagiety_hpzb554_4.json  bagiety_hpzb554_4.txt  bagiety_hpzb554_5.json  bagiety_hpzb554_5.txt  (+112 more)
src/: CMakeLists.txt  main.cpp  main.h
